@@ -4,6 +4,13 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.90-1 (opened July 3, 2011)
 
+	* swan: gained argument 'maxit' that can be used to restrict the
+	number of beals() passes on zeros. The default is 'maxit = Inf'
+	which is the old behaviour: beals() passes on zero entries
+	continue until there are no zeros or the number of zeros does not
+	change. Probably only 'maxit = 1' makes any sense (in addition to
+	the default 'maxit = Inf'), but all values are allowed.
+
 	* metaMDSrotate: results could be a bit off with NA in
 	environmental vector and >2D solution. The starting scores must be
 	orthogonal, but the initial orthogonalizing PCA was run without
